Closed Bug 1731107 Opened 3 years ago Closed 3 years ago

non-focused form elements should have more contrast, at least on Windows 8.1

Categories

(Core :: Widget: Win32, defect)

Unspecified
Windows
defect

Tracking

()

VERIFIED FIXED
94 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox92 --- unaffected
firefox93 + verified
firefox94 --- verified

People

(Reporter: aryx, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

Attached image form contrast.png

Bug 1693222 heavily reduced the contrast (and color) of non-focused form elements on Windows 8.1, e.g. https://bugzilla.mozilla.org/query.cgi?format=advanced

The styling matches the one of the 'old' style system settings in Windows 8.1 but subjectively feels too low contrast (Chrome/Edge use more contrast), at least with the grey OS theme (one of the 3 provided by the OS).

Flags: needinfo?(emilio)
Attached file focus_color.html

Yes, I can reproduce the issue on Windows 10. The multiple select tag is very low contrast.

Assignee: nobody → emilio
Flags: needinfo?(emilio)

There's no system color for such thing on Windows, at least according to:

https://docs.microsoft.com/en-us/windows/win32/api/winuser/nf-winuser-getsyscolor

Using 3DFACE/WINDOWTEXT seems a hack at best. Even windows built-in programs
like Task Manager use darker colors. So use the background that Edge uses, and
black for the color since that's what our <select> listbox and co actually uses
by default.

Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6742adc22917
Use more contrasting colors on windows for inactive selected items. r=cmartin
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)

Comment on attachment 9241849 [details]
Bug 1731107 - Use more contrasting colors on windows for inactive selected items. r=mhowell,cmartin

Beta/Release Uplift Approval Request

  • User impact if declined: comment 0
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: comment 0
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Simple color tweak
  • String changes made/needed: none
Flags: needinfo?(emilio)
Attachment #9241849 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9241849 [details]
Bug 1731107 - Use more contrasting colors on windows for inactive selected items. r=mhowell,cmartin

Low risk, approved for 93 beta 8, thanks.

Attachment #9241849 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

Reproduced the low contrast issue using old Nightly from 2021-09-16, verified that the contrast is now increased and easily visible on latest Nightly 94.0a1 and Beta 93.0b9 using Windows 10 and Windows 8.1.

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triaged]
Flags: qe-verify+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: