Bug 1731107 - Use more contrasting colors on windows for inactive selected items. r=cmartin a=pascalc

There's no system color for such thing on Windows, at least according to:

  https://docs.microsoft.com/en-us/windows/win32/api/winuser/nf-winuser-getsyscolor

Using 3DFACE/WINDOWTEXT seems a hack at best. Even windows built-in programs
like Task Manager use darker colors. So use the background that Edge uses, and
black for the color since that's what our <select> listbox and co actually uses
by default.

Differential Revision: https://phabricator.services.mozilla.com/D126007